[package]
name = "set_env"
version = "0.1.3"
authors = ["Tom Gowan <tomrgowan@gmail.com>"]
edition = "2018"
description = "Sets environment variables in your profile"
documentation = "https://docs.rs/env_perm"
repository = "https://github.com/freesig/env_perm"
readme = "README.md"
license = "MIT"
keywords = ["env", "environment", "variable"]

[target.'cfg(not(windows))'.dependencies]
dirs = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.35.0", features = ["Win32_System_Registry", "Win32_Foundation", "alloc"] }
