[package]
name = "set_env"
version = "1.1.1"
authors = ["CGQAQ <m.jason.liu@outlook.com>"]
edition = "2021"
description = "Sets environment variables permanently across all major platforms"
documentation = "https://docs.rs/set_env"
repository = "https://github.com/CGQAQ/set_env"
readme = "README.md"
license = "MIT"
keywords = ["env", "environment", "variable"]

[target.'cfg(not(windows))'.dependencies]
dirs = "4.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
